[gd_scene load_steps=4 format=3 uid="uid://73a5h12qyc8n"]

[ext_resource type="FontFile" uid="uid://du5nile3df65v" path="res://Fonts/Xolonium-regular/Xolonium-Regular.ttf" id="1_1l0p8"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_di0iv"]
[ext_resource type="PackedScene" uid="uid://c6gwdjl2qdvnr" path="res://Scenes/CustomButton.tscn" id="2_sskro"]

[node name="Main_Menu" type="CanvasLayer"]
script = ExtResource("1_di0iv")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 656.0
color = Color(0.123273, 0.310031, 0.37912, 1)

[node name="Highscore" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("1_1l0p8")
theme_override_font_sizes/font_size = 32
text = "Highscore: 
Greg - 20"

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
offset_left = 350.0
offset_top = 100.0
offset_right = 700.0
offset_bottom = 558.0
alignment = 1

[node name="Start" parent="ButtonsContainer" instance=ExtResource("2_sskro")]
layout_mode = 2
ButtonName = "Start"

[node name="Settings" parent="ButtonsContainer" instance=ExtResource("2_sskro")]
layout_mode = 2
ButtonName = "Settings"

[node name="Exit" parent="ButtonsContainer" instance=ExtResource("2_sskro")]
layout_mode = 2
ButtonName = "Exit"

[node name="NextButtonTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="NextButtonTimer" to="." method="cycle_through_menu"]
